k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fizzbuzz-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fizzbuzz-frontend
spec:
  hosts:
    - "*"
  gateways:
    - fizzbuzz-gateway
  http:
    - match:
        - uri:
            prefix: /api
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 4000
            host: fizzbuzz-frontend
            subset: v1
          weight: 0
        - destination:
            port:
              number: 4000
            host: fizzbuzz-frontend
            subset: v2
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fizzbuzz-frontend-destination
  namespace: fizzbuzz
spec:
  host: fizzbuzz-frontend
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
