k8s/istio/routing.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: "fizzbuzz"
spec:
  host: "*.fizzbuzz.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
